# FileSurfer

./: .gitignore  README.md  package.json
src/: App.jsx  index.css  themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: code_analysis.rs  config.rs  file_ops.rs  lib.rs  main.rs  token_counter.rs
src/components/: ClipboardHistoryPanel.jsx  CodeAnalysisPanel.jsx  DirectoryPicker.jsx  ExtensionFilters.jsx  FileTree.jsx  FileTreeNode.jsx  InverseSelectionPanel.jsx  KeyboardShortcuts.jsx  PreviewPanel.jsx  ProjectTypeDetector.jsx  SearchBar.jsx  SettingsPanel.jsx  SyntaxHighlighter.jsx  TitleBar.jsx  TokenCounter.jsx
